feat : apply spring boot best practices